@@ -1,0 +1,1 @@
+INSERT INTO `rule_values` VALUES ('1', 'Character:DeathExpLossMaxLevel', '255', 'Any level greater than this will no longer lose exp on death');
